Added README.md for main depository page and Week1

--- a/Week1/Code/FirstExample.tex
+++ b/Week1/Code/FirstExample.tex
@@ -1,3 +1,5 @@
+%%Desc: A first of typesetting a dcoument using latex.
+
 \documentclass[12pt]{article}
 \title{A Simple Document}
 \author{Donal Burns}
