Changed some errors with scripts after assesssment for week 3.

--- a/Week3/Code/TAutoCorr.tex
+++ b/Week3/Code/TAutoCorr.tex
@@ -1,30 +1,34 @@
-%%Desc: A first of typesetting a dcoument using latex.
+%%Desc: Script for writing latex write-up for `TAutoCor.R`.
 
 \documentclass[a4paper, 12pt]{article}
 \usepackage{graphicx}
 \usepackage{subcaption}
-\title{A Simple Document}
+\title{TAutoCor Report}
 \author{Donal Burns}
-\date{02/10/2019}
+\date{24/10/2019}
 \begin{document}
-  \maketitle
+
   
+  
+
+
+ 
 \begin{figure}[h!]
-    \centering
-    \begin{subfigure}[t]{0.4\linewdth}    
-    \includegraphics[width=\linewidth]{../Results/TAuto_Temps.pdf}
-    \caption{Graph of timeshifted temperature data.}
+  \centering
+  \begin{subfigure}[t]{0.4\linewidth}
+    \includegraphics[width=\linewidth]{TAuto_Temps.pdf}
+    \caption{Graph of time shifted temperature data. \newline t - temperature at time of recording}
     \label{Figure 1}
-    \end{subfigure}
-
-
-    \begin{subfigure}[t]{0.4\linewdth} 
-    \includegraphics{../Results/TAuto_SampleCor.pdf}
-    \caption{Graph showing the distribution of the correlations generated during sampling}
-    \label{Figure 2}
-    \end{subfigure}
+  \end{subfigure}
+  \begin{subfigure}[t]{0.4\linewidth}
+    \includegraphics[width=\linewidth]{TAuto_SampleCor.pdf}
+    \caption{Distribution of the correlations generated during sampling}
+  \end{subfigure}
+  \caption{}
+  \label{Figure 2}
 \end{figure}
 
+Figure 1 (a) shows the data as it was recorded at time t against a time shifted (t+1) version of that same data.  This is done to see if a previous years temperature can be show with this data to not be independent.  The correlation of the data sampled 10000 times randomly without replacement is show in the histogram (Fig. 1 (b)).  Looking at the distribution, that there is little correlation between the randomly sampled data.
 
 
 
