--- a/MiniProject/Code/Plotting.ipynb
+++ b/MiniProject/Code/Plotting.ipynb
@@ -363,9 +363,9 @@
     "    plt.ioff()\n",
     "    print(i)\n",
     "    tmpSubset = data[data[\"ID\"] == i]\n",
-    "#     fig = sns.lmplot(\"ResDensity\", \"N_TraitValue\", data = tmpSubset, fit_reg=False)\n",
-    "#     fig.savefig(\"../Results/{}.jpeg\".format(i))\n",
-    "#     plt.close(\"all\")\n",
+    "    fig = sns.lmplot(\"ResDensity\", \"N_TraitValue\", data = tmpSubset, fit_reg=False)\n",
+    "    fig.savefig(\"../Results/Plots/{}.jpeg\".format(i))\n",
+    "    plt.close(\"all\")\n",
     "\n"
    ]
   },
